--- a/src/ExperienceGenerator.Tests/ExperienceGenerator.Tests.csproj
+++ b/src/ExperienceGenerator.Tests/ExperienceGenerator.Tests.csproj
@@ -57,11 +57,12 @@
       <HintPath>..\packages\AutoFixture.Xunit2.3.42.0\lib\net45\Ploeh.AutoFixture.Xunit2.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Sitecore.Analytics, Version=8.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\inetpub\wwwroot\habitat.local\Website\bin\Sitecore.Analytics.dll</HintPath>
+    <Reference Include="Sitecore.Analytics">
+      <HintPath>..\Components\Sitecore.Analytics.dll</HintPath>
     </Reference>
-    <Reference Include="Sitecore.Analytics.Model, Version=8.1.0.0, Culture=neutral, processorArchitecture=MSIL" />
+    <Reference Include="Sitecore.Analytics.Model">
+      <HintPath>..\Components\Sitecore.Analytics.Model.dll</HintPath>
+    </Reference>
     <Reference Include="Sitecore.FakeDb, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Sitecore.FakeDb.1.0.1\lib\net45\Sitecore.FakeDb.dll</HintPath>
       <Private>True</Private>
@@ -73,9 +74,8 @@
     <Reference Include="Sitecore.Kernel">
       <HintPath>..\Components\Sitecore.Kernel.dll</HintPath>
     </Reference>
-    <Reference Include="Sitecore.Logging, Version=1.2.0.30715, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\inetpub\wwwroot\habitat.local\Website\bin\Sitecore.Logging.dll</HintPath>
+    <Reference Include="Sitecore.Logging">
+      <HintPath>..\Components\Sitecore.Logging.dll</HintPath>
     </Reference>
     <Reference Include="sitecore.nexus">
       <HintPath>..\Components\sitecore.nexus.dll</HintPath>
